test/fail/errors/ClashingModuleImport.agda
module ClashingModuleImport where

X = TODO--I-haven't-fully-understood-this-one
